--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "gatsby": "^1.9.63",
     "gatsby-link": "^1.6.21",
     "gatsby-plugin-i18n": "^0.3.3",
-    "gatsby-plugin-react-helmet": "^1.0.5"
+    "gatsby-plugin-react-helmet": "^1.0.5",
+    "intl": "^1.2.5",
+    "react-intl": "^2.4.0"
   },
   "keywords": [
     "gatsby"
